--- a/index.html
+++ b/index.html
@@ -7,116 +7,131 @@
     <title>DrivenEats</title>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
-
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <div class="container">
-        <!-- Container contendo toda a página -->
-       <div class="barratopo">
-           <!-- Barra superior fixa -->
-            <h1>
-                DrivenEats
-            </h1>
-            <h2>
-                Sua comida em 6 minutos
-            </h2>
-       </div>
-       <div class="barrafundo">
-            <div class="alerta">
-                <p>Selecione os 3 itens</p>
-                    <p>para fechar o pedido</p>
-            </div>
+      <!-- Container contendo toda a página -->
+      <div class="barratopo">
+        <!-- Barra superior fixa -->
+        <h1>
+          DrivenEats
+        </h1>
+        <h2>
+          Sua comida em 6 minutos
+        </h2>
+      </div>
+      <div class="barrafundo">
+        <!-- Barra inferior fixa -->
+        <button class="alerta" disabled onclick="menssagem()">
+          <p>Selecione os 3 itens</p>
+          <p>para fechar o pedido</p>
+        </button>
+      </div>
 
-       </div>
-
-       <div class="conteudo">
-            <!-- Divisão contendo os pedidos -->
-            <h1>Primeiro, seu prato</h1>
-            <div class="opções">
-                <div class = "opção">
-                    <img src="Media/flango.png" >
-                    <h2>Frango Yin Yang</h2>
-                    <h4>Um pouco de batata, um pouco de salada</h4>
-                    <h3>R$ 14,90</h3>
-                </div>
-                <div class = "opção">
-                    <img src="Media/flango.png" >
-                    <h2>Frango Yin Yang</h2>
-                    <h4>Um pouco de batata, um pouco de salada</h4>
-                    <h3>R$ 14,90</h3>
-                </div>
-                <div class = "opção">
-                    <img src="Media/flango.png" >
-                    <h2>Frango Yin Yang</h2>
-                    <h4>Um pouco de batata, um pouco de salada</h4>
-                    <h3>R$ 14,90</h3>
-                </div>
-                <div class = "opção">
-                    <img src="Media/flango.png" >
-                    <h2>Frango Yin Yang</h2>
-                    <h4>Um pouco de batata, um pouco de salada</h4>
-                    <h3>R$ 14,90</h3>
-                </div>
+      <div class="conteudo">
+        <!-- Divisão contendo os pedidos -->
+        <h1>Primeiro, seu prato</h1>
+        <div class="pratos">
+          <!-- Divisão que contém os pratos -->
+          <div class="opção" onclick="selecionarPrato(this)">
+            <div class="selecionado">
+              <ion-icon class="escondido" name="checkmark-circle"></ion-icon>
             </div>
-            <h1>Agora, sua bebida</h1>
-            <div class="opções">
-                <div class = "opção">
-                    <img src="Media/cola.png" >
-                    <h2>Coquinha gelada</h2>
-                    <h4>Lata 350ml</h4>
-                    <h3>R$ 3,90</h3>
-                </div>
-                <div class = "opção">
-                    <img src="Media/cola.png" >
-                    <h2>Coquinha gelada</h2>
-                    <h4>Lata 350ml</h4>
-                    <h3>R$ 4,90</h3>
-                </div>
-                <div class = "opção">
-                    <img src="Media/cola.png" >
-                    <h2>Coquinha gelada</h2>
-                    <h4>Lata 350ml</h4>
-                    <h3>R$ 6,90</h3>
-                </div>
-                <div class = "opção">
-                    <img src="Media/cola.png" >
-                    <h2>Coquinha gelada</h2>
-                    <h4>Lata 350ml</h4>
-                    <h3>R$ 5,90</h3>
-                </div>
+            <img src="Media/flango.png" />
+            <h2>Frango Yin Yang</h2>
+            <h4>Um pouco de batata, um pouco de salada</h4>
+            <h3>R$ 14,90</h3>
+          </div>
+          <div class="opção" onclick="selecionarPrato(this)">
+            <div class="selecionado">
+              <ion-icon class="escondido" name="checkmark-circle"></ion-icon>
             </div>
-            <h1>Por fim, sua sobremesa</h1>
-            <div class="opções">
-                <div class = "opção">
-                    <img src="Media/pusdim.png" >
-                    <h2>Pudim</h2>
-                    <h4>Apenas pudim</h4>
-                    <h3>R$ 9,90</h3>
-                </div>
-                <div class = "opção">
-                    <img src="Media/pusdim.png" >
-                    <h2>Pudim</h2>
-                    <h4>Apenas pudim</h4>
-                    <h3>R$ 7,90</h3>
-                </div>
-                <div class = "opção">
-                    <img src="Media/pusdim.png" >
-                    <h2>Pudim</h2>
-                    <h4>Apenas pudim</h4>
-                    <h3>R$ 6,90</h3>
-                </div>
-                <div class = "opção">
-                    <img src="Media/pusdim.png" >
-                    <h2>Pudim</h2>
-                    <h4>Apenas pudim</h4>
-                    <h3>R$ 4,90</h3>
-                </div>
+            <img src="Media/meat.jpg" />
+            <h2>Picanha do Chef</h2>
+            <h4>400 gramas + Batatas Rústicas</h4>
+            <h3>R$ 24,90</h3>
+          </div>
+          <div class="opção" onclick="selecionarPrato(this)">
+            <div class="selecionado">
+              <ion-icon class="escondido" name="checkmark-circle"></ion-icon>
             </div>
-       </div>
+            <img src="Media/salad.jpeg" />
+            <h2>Salada Vegetariana</h2>
+            <h4>Alface, pepino, cenoura e repolho</h4>
+            <h3>R$ 9,90</h3>
+          </div>
+          <div class="opção" onclick="selecionarPrato(this)">
+            <div class="selecionado">
+              <ion-icon class="escondido" name="checkmark-circle"></ion-icon>
+            </div>
+            <img src="Media/pizza.jpg" />
+            <h2>Pizza Margherita</h2>
+            <h4>20 cm de diâmetro, sabor da Itália</h4>
+            <h3>R$ 12,90</h3>
+          </div>
+        </div>
+        <h1>Agora, sua bebida</h1>
+        <div class="bebidas">
+          <!-- Divisão que contém as bebidas -->
+          <div class="opção" onclick="selecionarBebida(this)">
+            <div class="selecionado">
+              <ion-icon class="escondido" name="checkmark-circle"></ion-icon>
+            </div>
+            <img src="Media/water.jpeg" />
+            <h2>Água gelada</h2>
+            <h4>Garrafa 500ml</h4>
+            <h3>R$ 3,90</h3>
+          </div>
+          <div class="opção" onclick="selecionarBebida(this)">
+            <div class="selecionado">
+              <ion-icon class="escondido" name="checkmark-circle"></ion-icon>
+            </div>
+            <img src="Media/cola.png" />
+            <h2>Coquinha gelada</h2>
+            <h4>Lata 350ml</h4>
+            <h3>R$ 4,90</h3>
+          </div>
+          <div class="opção" onclick="selecionarBebida(this)">
+            <div class="selecionado">
+              <ion-icon class="escondido" name="checkmark-circle"></ion-icon>
+            </div>
+            <img src="Media/juice.jpg" />
+            <h2>Suco Laranja</h2>
+            <h4>Garrafa 400ml</h4>
+            <h3>R$ 6,90</h3>
+          </div>
+        </div>
+        <h1>Por fim, sua sobremesa</h1>
+        <div class="sobremesas">
+          <!-- Divisão que contém as sobremesas -->
+          <div class="opção" onclick="selecionarSobremesa(this)">
+            <div class="selecionado">
+              <ion-icon class="escondido" name="checkmark-circle"></ion-icon>
+            </div>
+            <img src="Media/pusdim.png" />
+            <h2>Pudim</h2>
+            <h4>100 gramas</h4>
+            <h3>R$ 4,90</h3>
+          </div>
+          <div class="opção" onclick="selecionarSobremesa(this)">
+            <div class="selecionado">
+              <ion-icon class="escondido" name="checkmark-circle"></ion-icon>
+            </div>
+            <img src="Media/jelly.jpeg" />
+            <h2>Gelatina</h2>
+            <h4>100 gramas</h4>
+            <h3>R$ 2,90</h3>
+          </div>
+        </div>
+      </div>
     </div>
-    
-</body>
+    <script src="scripts.js"></script>
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+  </body>
 </html>
